# libdedx

./: .gitignore  CMakeLists.txt  README.md  generate.sh
octave/: __dedx__.cpp  dedx.m  make_dedx.m  test1.m  test2.m  test3.m
src/generator/: generator.cpp  generator.h  gensrim96.cpp  print_cpp.cpp
src/lib/: libdedx.c  libdedx.h
src/test/: main.cpp
